Closed Bug 1742115 Opened 4 years ago Closed 4 years ago

The UnsafeConvertValidUtf8toUtf16 function forwards to the wrong Rust implementation

Categories

(Core :: Internationalization, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(1 file)

Happened to notice in in mfbt/Utf8.h that the implementations of ConvertUtf8toUtf16 and UnsafeConvertValidUtf8toUtf16 are identical, even though their docs claim differences.

It looks like this is simply a copy/paste error, and UnsafeConvertValidUtf8toUtf16 was actually intended to wrap encoding_mem_convert_str_to_utf16 rather than encoding_mem_convert_utf8_to_utf16.

(According to searchfox, there don't appear to be any current callers of the UnsafeConvertValidUtf8toUtf16 API, so nothing is affected by this right now.)

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ac52da65f48f Fix UnsafeConvertValidUtf8toUtf16 to wrap the correct Rust implementation. r=hsivonen
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: