Bug 1742115 - Fix UnsafeConvertValidUtf8toUtf16 to wrap the correct Rust implementation. r=hsivonen

Differential Revision: https://phabricator.services.mozilla.com/D131645